fixing spacing between stats and skills

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -93,8 +93,8 @@ h1 {
   width: 48%;
   height: 200px;
   margin-top: 50px;
-  margin-left: 5px;
-  float: right;
+  margin-left: 4%;
+  float: left;
 }
 
 #inven {
